--- a/main.html
+++ b/main.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Price Card</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="card">
+        <img
+          src="https://www.gardendesign.com/pictures/images/320x240Exact/dream-team-s-portland-garden_6/dicentra-spectabilis-common-bleeding-heart-old-fashioned-bleeding-heart-shutterstock-com_12787.jpg"
+          alt="product image"
+        />
+        <h2>Pricing Card</h2>
+        <h3>Price: Rs 200</h3>
+        <p>Lorem ipsum dolor sit amet consectetur!</p>
+        <button>Buy Now</button>
+      </div>
+    </div>
+  </body>
 </html>
